@startuml research_system_final

' 枚举类型定义
enum ProjectStatus <<(E,orchid)>> {
  在研
  已结题
  暂停
}

enum DataSource <<(E,orchid)>> {
  实地采集
  系统调用
}

enum AchievementType <<(E,orchid)>> {
  论文
  报告
  专利
  数据集
  专著
}

enum SharePermission <<(E,orchid)>> {
  公开
  内部共享
  保密
}

' 用户类
class User <<(C,lightblue)>> {
  user_id : String
  user_name : String
  role : String
}

' 研究项目类
class ResearchProject <<(C,lightblue)>> {
  project_id : String
  project_name : String
  leader_id : String
  apply_organization : String
  approval_date : Date
  completion_date : Date
  project_status : ProjectStatus
  research_field : String
  description : String
}

' 研究数据采集类
class ResearchDataRecord <<(C,lightblue)>> {
  collection_id : String
  project_id : String
  collector_id : String
  collection_time : DateTime
  region_id : String
  collection_content : String
  data_source : DataSource
  sample_id : String
  monitoring_data_id : String
  data_file_path : String
  remarks : String
  is_verified : Boolean
  verified_by : String
  verified_at : DateTime
}

' 研究成果类
class ResearchAchievement <<(C,lightblue)>> {
  achievement_id : String
  project_id : String
  achievement_type : AchievementType
  achievement_name : String
  submit_time : Date
  file_path : String
  share_permission : SharePermission
}

' 关系定义
User "1" -- "0..*" ResearchProject : leads
User "1" -- "0..*" ResearchDataRecord : collects
User "1" -- "0..*" ResearchDataRecord : verifies
ResearchProject "1" -- "0..*" ResearchDataRecord : has
ResearchProject "1" -- "0..*" ResearchAchievement : produces

' 枚举关系
ResearchProject -- ProjectStatus
ResearchDataRecord -- DataSource
ResearchAchievement -- AchievementType
ResearchAchievement -- SharePermission

@enduml